<resources>
    <string name="app_name">CalculatorGB</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_dot">.</string>
    <string name="key_zero">0</string>
    <string name="key_split">/</string>
    <string name="key_multiply">x</string>
    <string name="key_minus">—</string>
    <string name="key_plus">+</string>
    <string name="key_result">=</string>
    <string name="default_num">0</string>
    <string name="key_reset">C</string>
    <string name="key_theme1">Theme #1</string>
    <string name="key_theme2">Theme #2</string>
</resources>